--- a/package.json
+++ b/package.json
@@ -1,34 +1,32 @@
 {
-  "name": "frontend-boilerplate",
-  "version": "1.0.0",
-  "description": "Simple front-end boilerplate using Gulp 4",
-  "main": "gulpfile.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/thecodercoder/frontend-boilerplate.git"
-  },
-  "keywords": [
-    "gulp",
-    "boilerplate",
-    "html",
-    "css",
-    "javascript"
-  ],
-  "author": "@thecodercoder",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/thecodercoder/frontend-boilerplate/issues"
-  },
-  "homepage": "https://github.com/thecodercoder/frontend-boilerplate#readme",
-  "devDependencies": {
-    "autoprefixer": "^9.7.0",
-    "cssnano": "^4.1.10",
-    "gulp": "^4.0.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-postcss": "^8.0.0",
-    "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2"
-  }
+    "name": "portfolio",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "build": "gulp build"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/thecodercoder/frontend-boilerplate.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/thecodercoder/frontend-boilerplate/issues"
+    },
+    "homepage": "https://github.com/thecodercoder/frontend-boilerplate#readme",
+    "devDependencies": {
+        "browser-sync": "^2.26.7",
+        "gulp": "^4.0.2",
+        "gulp-clean-css": "^4.3.0",
+        "gulp-concat": "^2.6.1",
+        "gulp-if": "^3.0.0",
+        "gulp-nunjucks-render": "^2.2.3",
+        "gulp-order": "^1.2.0",
+        "gulp-sass": "^4.1.0",
+        "gulp-sourcemaps": "^2.6.5",
+        "gulp-uglify": "^3.0.2"
+    },
+    "dependencies": {}
 }
