--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "gulp build"
+        "dev": "gulp dev",
+        "build": "gulp build",
+        "clean": "gulp clean"
     },
     "repository": {
         "type": "git",
@@ -18,6 +20,7 @@
     "homepage": "https://github.com/thecodercoder/frontend-boilerplate#readme",
     "devDependencies": {
         "browser-sync": "^2.26.7",
+        "del": "^5.1.0",
         "gulp": "^4.0.2",
         "gulp-clean-css": "^4.3.0",
         "gulp-concat": "^2.6.1",
