--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-boilerplate",
+  "name": "front-end-boilerplate",
   "version": "1.0.1",
   "description": "Easy to use boilerplate for your front-end project.",
   "main": "index.js",
